# festGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: 3d_perspective.glsl.frag  3d_perspective.glsl.vert  color.glsl.frag  color.glsl.vert  texture.glsl.frag  texture.glsl.vert
src/: CMakeLists.txt  main.cpp
src/renderer/: shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/renderer_backend/OpenGL/: ogl_shader.cpp  ogl_shader.hpp  ogl_texture.cpp  ogl_texture.hpp
src/shaders/: shader.frag  shader.glsl.frag  shader.vert
src/tests/: test.cpp  test.hpp  test_clear_color.cpp  test_clear_color.hpp  test_hello_triangle.cpp  test_hello_triangle.hpp  test_rotating_3d_cube.cpp  test_rotating_3d_cube.hpp  test_texture2D_square.cpp  test_texture2D_square.hpp  tests_menu.cpp  tests_menu.hpp
src/utils/: CMakeLists.txt  file_reader.cpp  file_reader.hpp  image_loader.cpp  image_loader.hpp  image_loader_templates.tpp
